--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,16 @@
 <resources>
+    <!-- Main Strings -->
     <string name="app_name">Cashr</string>
     <string name="title_activity_login">LoginActivity</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
+    
+    <!-- Login/Create Account Activity Strings -->
+    <string name="label_username">Username</string>
+    <string name="label_password">Password</string>
+    <string name="label_login">Login</string>
+    <string name="label_submit">Submit</string>
+    <string name="label_create">Create One</string>
+    <string name="label_no_account">Do not have an account?</string>
+    <string name="title_activity_create_account">Create Account</string>
+
 </resources>
