--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="label_username">Username</string>
     <string name="label_password">Password</string>
     <string name="label_login">Login</string>
+    <string name="label_user_id">User ID</string>
     <string name="label_submit">Submit</string>
     <string name="label_create">Create One</string>
     <string name="label_no_account">Do not have an account?</string>
