--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,10 @@
     <string name="title_activity_create_account">Create Account</string>
     <string name="key_username">username</string>
     <string name="key_password">password</string>
+    <string name="title_activity_cards">CardsActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_account">AccountActivity</string>
 
 </resources>
